--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
                 <div  data-key="65" class="drop-zone bl key"></div>
                 <div  data-key="65" class="drop-zone br key"></div>
             </div>
-           
+            
+           <audio src="audio/guitar.mp3"></audio>
         </section>
     </main>
 
